<resources>
    <string name="app_name">TD MyStudent</string>
    <string name="currency">$</string>
    <string name="btn_contribute">Contribute to Goal</string>
    <string name="txt_savings">Savings</string>
    <string name="txt_goals">Goal Details</string>
    <string name="txt_currentSavings">Current Savings</string>
    <string name="txt_currentSpending">Current Spending</string>
    <string name="txt_targetSavingAmount">Savings Goal</string>
    <string name="txt_contact">Consult Financial Advisor</string>
    <string name="txt_home">Home</string>
    <string name="txt_goalDetails">Goal Details</string>
    <string name="txt_applyLoan">Apply for Loan</string>
    <string name="txt_refer">Refer to Friend</string>
    <string name="txt_userPrefix">Hi, </string>
    <string name="rad_daily">Daily</string>
    <string name="rad_weekly">Weekly</string>
    <string name="rad_monthly">Monthly</string>
    <string name="rad_yearly">Yearly</string>
<<<<<<< HEAD

    <string name="phone_advisor">18558826918</string>
    <string name="text_td">834357</string>
    <string name="appointment_site">https://www.td.com/ca/en/personal-banking/products/borrowing/lines-of-credit/student-line-of-credit/#/university</string>
    <string name="alert_titleContact">Contact us via</string>
=======
    <string name="contri_amount">Contribute Amount</string>
    <string name="contri_now">Contribute now!</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="contri_confirmation">Contribute now?</string>
>>>>>>> origin/api2
</resources>
