<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalActivity"
    android:orientation="vertical">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/main_imgHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/forest_path"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/goal_btnApplyLoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:layout_marginLeft="@dimen/control_margin"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_list_icon" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    style="@style/TextMenu"
                    android:text="@string/txt_applyLoan"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/goal_btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:layout_marginLeft="@dimen/control_margin"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_home_icon" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textColor="@android:color/white"
                        style="@style/TextMenu"
                        android:text="@string/txt_home"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/goal_btnRefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_marginTop"
                android:layout_marginLeft="@dimen/control_margin"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_add_person_icon" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    style="@style/TextMenu"
                    android:text="@string/txt_refer"/>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/main_txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextH1"
            android:textColor="@android:color/white"
            android:layout_alignBottom="@id/main_imgHeader"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_goals"/>

        <TextView
            android:id="@+id/main_txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextUser"
            android:textColor="@android:color/white"
            android:layout_alignBottom="@id/main_imgHeader"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/control_margin"
            android:text="@string/txt_userPrefix"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/app_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/control_margin"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/colorNeutralLight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/control_margin"
                    style="@style/TextH2"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/txt_targetSavingAmount"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:entries="@array/savings_frequency"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textSize="24sp"/>
                <EditText
                    android:id="@+id/goal_editSavings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
            <EditText
                android:id="@+id/goal_editEnrollment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="date"
                android:hint="Enter Enrollment Date" />
            <Button
                android:id="@+id/goal_btnEnrollmentCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/goal_editEnrollment"
                android:text="Change enrollment date" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText
                android:id="@+id/goal_editGraduation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="date"
                android:hint="Enter Graduation Date" />
            <Button
                android:id="@+id/goal_btnGraduationCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/goal_editGraduation"
                android:text="Change graduation date" />

        </RelativeLayout>

        <Button
            android:id="@+id/goal_btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LongButton"
            android:text="Save"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/goal_btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LongButton"
            android:backgroundTint="@color/colorSecondary"
            android:text="Reset"
            android:textSize="14sp"/>

    </LinearLayout>



</LinearLayout>
